# Robot-Tracking-Arm-

./: CMakeLists.txt  README.md  Robot.cpp  Robot.h  RobotManager.cpp  RobotManager.h  Sensor.cpp  Sensor.h  docs.ai_collaboration_log.md  main.cpp
docs/: ai_collaboration.md  final_reflection.md
docs/featture_spec/: update_robot_speed.md
mkdir docs/docs/: implementation_plan.md
prompts/: cmake_debugging.md  feature_help.md
tests/: arm_control_tests.md  test_main.cpp  updated_speed_tests.md
